--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,7 +20,7 @@ body
         margin-left: auto
         margin-right: auto
         text-align: $position
-        .cardA 
+        .activeCard
             +cardsStyle
             border: $borderBrightColour
             cursor: default
