--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -5,3 +5,6 @@
     background-image: url("../img/card.png")
     border-radius: 4px
     transition: all .3x ease-in-out
+    @media (max-width: 800px) 
+        height: 22vw
+        width: 22vw
