--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,39 +5,51 @@
     padding: 0
     box-sizing: border-box
 body 
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: space-around
+    width: $allAvailableWidth
+    height: $allAvailableHeight
     background-color: #26262E
     color: $accent
     font-family: 'Lobster', sans-serif
     font-size: 28px
-    h1 
+    header
         font-size: 64px
         font-weight: 400
         text-align: $position
         letter-spacing: 5px
-        margin-top: 20px
-    .board 
-        width: 600px
-        margin-left: auto
-        margin-right: auto
-        text-align: $position
-        .activeCard
-            +cardsStyle
-            border: $borderBrightColour
-            cursor: default
-            filter: brightness(100%)
-        .card 
-            +cardsStyle
-            border: $borderDarkColour
-            cursor: pointer
-            filter: brightness(70%)
-            &:hover 
+        @media (max-width: 800px) 
+            font-size: 40px
+        @media (max-width: 500px)
+            font-size: 28px 
+    main 
+        @media (max-width: 800px) 
+            width: 100vw
+        .board 
+            width: 55vw
+            text-align: $position
+            @media (max-width: 800px) 
+                width: $allAvailableWidth
+            .activeCard
+                +cardsStyle
                 border: $borderBrightColour
+                cursor: default
                 filter: brightness(100%)
-p 
-    text-align: $position
-    margin-top: 5px
-    margin-bottom: 25px
-    letter-spacing: 2px
+                background-repeat: no-repeat
+                background-size: contain
+            .card 
+                +cardsStyle
+                border: $borderDarkColour
+                cursor: pointer
+                filter: brightness(70%)
+                background-repeat: no-repeat
+                background-size: contain
+                &:hover 
+                    border: $borderBrightColour
+                    filter: brightness(100%)
 .score 
+    flex-basis: 100px
     margin-top: 5px
     letter-spacing: 2px
