--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -5,6 +5,9 @@
     background-image: url("../img/card.png")
     border-radius: 4px
     transition: all .3x ease-in-out
+    @media (min-width: 1430px)
+        height: 9vw
+        width: 9vw
     @media (max-width: 800px) 
         height: 22vw
         width: 22vw
