--- a/sass/style.sass
+++ b/sass/style.sass
@@ -30,6 +30,8 @@ body
         .board 
             width: 55vw
             text-align: $position
+            @media (min-width: 1430px)
+                width: 40vw
             @media (max-width: 800px) 
                 width: $allAvailableWidth
             .activeCard
