--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -5,6 +5,7 @@
     background-image: url("../img/card.png")
     border-radius: 4px
     transition: all .3x ease-in-out
+    margin: 1px
     @media screen and (max-height: 440px)
         height: 12vw
         width: 12vw
