--- a/sass/style.sass
+++ b/sass/style.sass
@@ -59,6 +59,7 @@ body
                     border: $borderBrightColour
                     filter: brightness(100%)
 .score 
+    font-size: 30px
     flex-basis: 100px
     margin-top: 5px
     letter-spacing: 2px
