--- a/sass/style.sass
+++ b/sass/style.sass
@@ -57,9 +57,13 @@ body
                 background-size: contain
                 &:hover 
                     border: $borderBrightColour
-                    filter: brightness(100%)
+                    filter: brightness(100%)          
 .score 
     font-size: 30px
     flex-basis: 100px
     margin-top: 5px
     letter-spacing: 2px
+h2
+    font-size: 70px
+    @media (max-width: 850px)
+        font-size: 36px
