--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -13,8 +13,11 @@
         height: 12vw
         width: 12vw
     @media (min-width: 1430px)
-        height: 9vw
-        width: 9vw
+        height: 7vw
+        width: 7vw
     @media (max-width: 800px) and (min-height: 801px)
         height: 22vw
         width: 22vw
+    @media screen and (max-width: 440px)
+        height: 20vw
+        width: 20vw
